# iam

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  Settings.toml.sample  flow.md  skaffold.yaml
docker/: Dockerfile  cli.Dockerfile  migrations.Dockerfile  run.sh  seeds.Dockerfile
docs/src/: SUMMARY.md  api.account.delete.md  api.account.disable.md  api.account.enable.md  api.account.is-enabled.md  api.account.md  api.account.read.md  api.authentication.access-token.md  api.authentication.access-token.refresh.md  api.authentication.access-token.retrieve.md  api.authentication.access-token.revoke.md  api.authentication.client-identity.create.md  api.authentication.client-identity.delete.md  api.authentication.client-identity.list.md  api.authentication.client-identity.md  api.authorization.action-attr.create.md  api.authorization.action-attr.delete.md  api.authorization.action-attr.list.md  api.authorization.action-attr.md  api.authorization.action-attr.read.md  api.authorization.action-attr.tree.md  api.authorization.md  api.authorization.object-attr.create.md  api.authorization.object-attr.delete.md  api.authorization.object-attr.list.md  api.authorization.object-attr.md  api.authorization.object-attr.read.md  (+23 more)
k8s/: iam-headless.yaml  iam-jwt.yaml  iam-migrations.yaml  iam-seeds.yaml  iam.yaml
scripts/: run-migrations.sh  travis-deploy.sh
seeds/: 2018-08-08-114459_init.sql
settings/: default.toml
src/: abac_attribute.rs  lib.rs  main.rs  schema.rs  settings.rs
tests/: abac_object.rs  auth.rs  ping.rs  shared.rs
(+201 files in other folders)
