[package]
name = "iam"
version = "0.1.0"
authors = ["Aleksey Ivanov <ialexxei@gmail.com>"]

[dependencies]
diesel = { version = "1.2", features = ["postgres", "uuid", "r2d2", "chrono", "serde_json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.6", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
