[package]
name = "iam"
version = "0.1.0"
authors = ["Aleksey Ivanov <ialexxei@gmail.com>"]

[dependencies]
diesel = { version = "1.3", features = ["postgres", "uuid", "r2d2", "chrono", "serde_json"] }
migrations_internals = { version = "1.3" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.6", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
actix = "0.7"
actix-web = "0.7"
env_logger = "0.5"
futures = "0.1"
jsonrpc-core = "8.0"
jsonrpc-macros = "8.0"
log = "0.4"
num_cpus = "1.8"
failure = "0.1"
frank_jwt = "3.0"
config = "0.9"
lazy_static = "1.0"
abac = { path = "abac-rs", features = ["serde"] }
ring = "0.12.1"
jsonwebtoken = "4.0.1"
quicli = "0.3"

[dev-dependencies]
pretty_assertions = "*"

[[test]]
name = "api_tests"
path = "tests/api/lib.rs"

[patch.crates-io]
diesel = { git = "https://github.com/diesel-rs/diesel", rev = "aaa1c61" }
